--- a/sass/layouts/_block.scss
+++ b/sass/layouts/_block.scss
@@ -10,3 +10,7 @@
     padding-top: 0;
   }
 }
+
+#block-gent-gentinfo-gentinfo-normal-block {
+  margin-right: 0;
+}
